<resources>
    <string name="app_name">My Application</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="Room">Кімната: - </string>
    <string name="Temp">Температура: - </string>
    <string name="Hum">Вологість: - </string>
    <string name="Gas">Газ: - </string>
    <string name="Altitude">Висота: - </string>
    <string name="Pressure">Тиск: - </string>
    <string name="Recomment">Рекомендації: - </string>

</resources>